--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,11 +1,11 @@
 @software{FAST_Calibration,
-  title = {Matlab Script FAST Calibration},
+  title = {Matlab Script FAST Calibration v2.0},
   rights = {GPLv3},
   url = {https://github.com/MorZieg/FAST_Calibration},
   shorttitle = {FAST Calibration},
-  version = {2018.9.1},
-  urldate = {2018-09-01},
+  version = {2021.3.12},
+  urldate = {2021-03-12},
   keywords = {Scientific/Engineering,Scientific/Engineering - Information Analysis,Scientific/Engineering - Physics,Scientific/Engineering - Visualization,Software Development - Libraries - Application Frameworks},
-  author = {Moritz O. Ziegler},
-  doi = {10.5880/wsm.2018.003}
+  author = {Moritz O. Ziegler and Oliver Heidbach},
+  doi = {10.5880/wsm.2021.002}
 }
