--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,11 +1,11 @@
 @software{FAST_Calibration,
-  title = {Matlab Script FAST Calibration v2.0},
+  title = {Matlab Script FAST Calibration v2.4},
   rights = {GPLv3},
   url = {https://github.com/MorZieg/FAST_Calibration},
   shorttitle = {FAST Calibration},
-  version = {2021.3.12},
-  urldate = {2021-03-12},
+  version = {2023.12.01},
+  urldate = {2023-12-01},
   keywords = {Scientific/Engineering,Scientific/Engineering - Information Analysis,Scientific/Engineering - Physics,Scientific/Engineering - Visualization,Software Development - Libraries - Application Frameworks},
-  author = {Moritz O. Ziegler and Oliver Heidbach},
-  doi = {10.5880/wsm.2021.002}
+  author = {Moritz O. Ziegler and Oliver Heidbach and Sophia Morawietz and Yusen Wang},
+  doi = {10.5880/wsm.2023.002}
 }
